<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PantryQuest</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_recipe">Recipe</string>
    <string name="logo">this is the main logo</string>
    <string name="edit_message">enter an ingredient</string>
    <string name="button_add">add</string>
    <string name="button_send">search</string>
    <string name="button_back">back</string>
    <string name="default_title">Default Recipe Title</string>
    <string name="default_desc">Default Recipe Description</string>
    <string name="default_steps">Default Recipe Steps</string>
    <string name="cooking_method">Cooking Method</string>
    <string name="cb_bake">Bake</string>
    <string name="cb_boil">Boil</string>
    <string name="cb_grill">Grill</string>
    <string name="cb_slowcook">Slowcook</string>
    <string name="cb_stovetop">Stovetop</string>
    <string name="cb_fry">Fry</string>
    <string name="diet_restrict">Dietary Restrictions</string>
    <string name="cb_lactose">Lactose Free</string>
    <string name="cb_vegetarian">Vegetarian</string>
    <string name="cb_vegan">Vegan</string>
    <string name="cb_gluten">Gluten Free</string>
    <string name="cb_nonuts">No Nuts</string>
    <string name="cals">Max Calories: 5000</string>
    <string name="time">Max PrepTime (Minutes): 1000</string>
    <string name="button_refresh">Refresh Search</string>
    <string name="welcome">Welcome, Guest, to PantryQuest!</string>
    <string name="edit_username">Enter Your Username</string>
    <string name="edit_password">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="register_name">What\'s Your Name?</string>
    <string name="register_usr">Enter a Username</string>
    <string name="register_pass">Enter a Password</string>
    <string name="subRegister">Submit and Register</string>

</resources>
