<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout" 
    tools:context="com.example.pantryquest.Recipe" 
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:typeface="sans" >
    <!--  the main content view  -->
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@drawable/background_drawable" >
	
	    <ImageView
	        android:id="@+id/image"
	        android:layout_width="150dp"
	        android:layout_height="150dp"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:contentDescription="@string/logo"
	        android:src="@drawable/logo_2" />
	
	    <TextView
	        android:id="@+id/title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/image"
	        android:layout_centerHorizontal="true"
	        android:text="@string/default_title" />
	
	    <TextView
	        android:id="@+id/description"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/title"
	        android:layout_centerHorizontal="true"
	        android:text="@string/default_desc" />
	
	    <TextView
	        android:id="@+id/steps"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:scrollbars="vertical"
	        android:layout_below="@+id/description"
	        android:layout_centerHorizontal="true"
	        android:text="@string/default_steps" 
	        android:paddingStart="5dp"
	        android:paddingLeft="5dp"
	        android:paddingEnd="15dp"
	        android:paddingRight="15dp"
	        android:paddingBottom="15dp"
	        android:paddingTop="5dp"
	        android:fadeScrollbars="false" />
	
	</RelativeLayout>
</android.support.v4.widget.DrawerLayout>