<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout" 
    tools:context="com.example.pantryquest.MainActivity" 
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <!--  the main content view  -->
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@drawable/background_drawable" 
	    android:orientation="vertical" >
	
	    <ImageView
	        android:id="@+id/logo"
	        android:layout_gravity="center_horizontal"
	        android:layout_width="150dp"
	        android:layout_height="150dp"
	        android:contentDescription="@string/logo"
	        android:src="@drawable/logo_2" />
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent" >
	    	
	     	<EditText
		        android:id="@+id/edit_message"
		        android:layout_weight="3"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:hint="@string/edit_message" />
		
		    <Button
		        android:id="@+id/button"
		        android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/button_add" />
		    <Button
		        android:id="@+id/button2"
		        android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/button_send" />
		    
	    </LinearLayout>
	</LinearLayout>
	<!--  this is the drawer -->
	<LinearLayout
	    android:id="@+id/left_drawer"
	    android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"
        android:orientation="vertical" >
	</LinearLayout>
</android.support.v4.widget.DrawerLayout>